[project]
name = "simplyqrl"
version = "0.1.0"
description = "A benchmarking library for hybrid QRL agents"
authors = [
    {name = "Javier Lázaro",email = "javilazaro99@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "pennylane (>=0.41.1,<0.42.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "simplyqrl", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
